Fixed whitespace in show page

--- a/cryptoservice-frontend/src/style.scss
+++ b/cryptoservice-frontend/src/style.scss
@@ -164,7 +164,6 @@ img {
 }
 
 .show-header {
-  padding: 40px 0;
   text-align: center;
   h2 {
     font-size: 32px;
@@ -185,11 +184,9 @@ img {
 .show-details {
   display: flex;
   flex-direction: column;
-  
-  padding-top: 40px;
-  padding-bottom: 60px;
-  padding-left: 30px;
-  padding-right: 30px;
+  border : solid 3px var(--line_color) ;
+  border-radius: 50px;
+  padding: 20px;
 
   h2 {
     font-size: 26px;
@@ -199,6 +196,12 @@ img {
   }
 }
 
+.show-page{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 40px;
+}
 .show-details-row {
   display: flex;
   align-items: center;
